crates/rome_formatter/tests/specs/prettier/js/comments/jsdoc.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: jsdoc.js

---
# Input
```js
/** @type {any} */
const x = (
    <div>
        <div />
    </div>
);

/**
 * @type {object}
 */
() => (
    <div>
        sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
    </div>
);

/**
 * @type {object}
 */
function HelloWorld() {
    return (
        <div>
           <span>Test</span>
        </div>
    );
}
```

# Output
```js
/** @type {any} */
const x = (
    <div>
        <;
div />
    </div>
)

/**
 * @type {object}
 */
() => (
<<<<<<< HEAD
  <div>
        sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
=======
    <div>
sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
>>>>>>> ed0e4b6d04 (jsx in arrow functions and as statements)
    </div>
)

/**
 * @type {object}
 */
function HelloWorld() {
  return (
        <div>
           <;
  span>Test</span>
        </div>
  )
}

```

# Errors
```
<<<<<<< HEAD
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ jsdoc.js:3:5
  │  
3 │ ┌     <div>
4 │ │         <div />
  │ └───────────────^ TypeScript only syntax
=======
error[SyntaxError]: expected `')'` but instead found `div`
  ┌─ jsdoc.js:4:10
  │
4 │         <div />
  │          ^^^ unexpected
>>>>>>> 0ae10e4634 (jsx in arrow functions and as statements)

error: unterminated regex literal
  ┌─ jsdoc.js:5:11
  │
5 │     </div>
  │      -    ^ ...but the line ends here
  │      │    
  │      a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
  ┌─ jsdoc.js:6:1
  │
6 │ );
  │ ^ Expected an expression here

<<<<<<< HEAD
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ jsdoc.js:12:5
   │  
12 │ ┌     <div>
13 │ │         sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
14 │ │     </div>
   │ └──────────^ JSX only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ jsdoc.js:22:9
   │  
22 │ ┌         <div>
23 │ │            <span>Test</span>
   │ └────────────────────────────^ TypeScript only syntax
=======
error[SyntaxError]: expected `')'` but instead found `sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp`
   ┌─ jsdoc.js:13:9
   │
13 │         sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unexpected

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ jsdoc.js:14:6
   │
14 │     </div>
   │     -^ But this operator was encountered instead
   │     │ 
   │     This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ jsdoc.js:15:1
   │
15 │ );
   │ ^ Expected an expression here

error[SyntaxError]: expected `')'` but instead found `span`
   ┌─ jsdoc.js:23:13
   │
23 │            <span>Test</span>
   │             ^^^^ unexpected
>>>>>>> ed0e4b6d04 (jsx in arrow functions and as statements)

error: unterminated regex literal
   ┌─ jsdoc.js:24:15
   │
24 │         </div>
   │          -    ^ ...but the line ends here
   │          │    
   │          a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ jsdoc.js:25:5
   │
25 │     );
   │     ^ Expected an expression here


```


